// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu Selectable should render 1`] = `
<div>
  <div
    style="width: 200px;"
  >
    <div
      class="Dropdown full-width"
    >
      <div
        class="container"
      >
        <div
          class="button-container"
        >
          <button
            aria-label="Select a value"
            class="Button lg primary stone right has-icon"
            data-test="dropdown-value"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.47 7.72a.75.75 0 0 1 1.06 0l7.5 7.5a.75.75 0 1 1-1.06 1.06L12 9.31l-6.97 6.97a.75.75 0 0 1-1.06-1.06l7.5-7.5Z"
                fill-rule="evenodd"
              />
            </svg>
            <span>
              Select a value
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropdownMenu Selectable should render menu on label/button click 1`] = `
<div>
  <div
    style="width: 200px;"
  >
    <div
      class="Dropdown full-width"
    >
      <div
        class="container"
      >
        <div
          class="button-container"
        >
          <button
            aria-label="Select a value"
            class="Button lg primary stone right has-icon"
            data-test="dropdown-value"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12.53 16.28a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 0 1 1.06-1.06L12 14.69l6.97-6.97a.75.75 0 1 1 1.06 1.06l-7.5 7.5Z"
                fill-rule="evenodd"
              />
            </svg>
            <span>
              Select a value
            </span>
          </button>
        </div>
        <div>
          <div
            class="Menu lg menu-enter menu-enter-active"
            data-test="dropdown-menu"
            style="position: absolute; top: 0px; left: 0px; visibility: hidden;"
          >
            <ul>
              <li
                class="MenuItem"
              >
                <button
                  aria-current="false"
                  aria-disabled="false"
                  aria-label="Quick save "
                  class="Button lg ghost stone left not-rounded"
                >
                  <span>
                    <span
                      id="item-Quick save"
                    >
                      Quick save 
                    </span>
                  </span>
                </button>
              </li>
              <li
                class="MenuItem"
              >
                <button
                  aria-current="false"
                  aria-disabled="false"
                  aria-label="Save"
                  class="Button lg ghost stone left not-rounded"
                >
                  <span>
                    <span
                      id="item-Save"
                    >
                      Save
                    </span>
                  </span>
                </button>
              </li>
              <li
                class="MenuItem"
              >
                <button
                  aria-current="false"
                  aria-disabled="false"
                  aria-label="Reassign"
                  class="Button lg ghost stone left not-rounded"
                >
                  <span>
                    <span
                      id="item-Reassign"
                    >
                      Reassign
                    </span>
                  </span>
                </button>
              </li>
              <li
                class="MenuItem"
              >
                <button
                  aria-current="false"
                  aria-disabled="false"
                  aria-label="Edit"
                  class="Button lg ghost stone left not-rounded"
                >
                  <span>
                    <span
                      id="item-Edit"
                    >
                      Edit
                    </span>
                  </span>
                </button>
              </li>
              <li
                class="MenuItem"
              >
                <button
                  aria-current="false"
                  aria-disabled="false"
                  aria-label="Delete"
                  class="Button lg ghost stone left not-rounded"
                >
                  <span>
                    <span
                      id="item-Delete"
                    >
                      Delete
                    </span>
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
